# lbank-rs

./: .gitignore  Cargo.toml  README.md  api.txt  group.txt
examples/: account_endpoints_async_test.rs  account_endpoints_test.rs  debug_account_response.rs  general_endpoints_async_test.rs  general_endpoints_blocking_test.rs  get_balance_test.rs  get_balance_test_async.rs  market_endpoints_async_test.rs  market_endpoints_blocking_test.rs  ping_test.rs  ping_test_async.rs  spot_endpoints_async_test.rs  spot_endpoints_test.rs  test_key_format.rs  time_test.rs  time_test_async.rs  wallet_endpoints_async_test.rs  wallet_endpoints_test.rs
src/: api.rs  client.rs  config.rs  errors.rs  general.rs  lib.rs  main.rs  market.rs  model.rs  util.rs
src/Account/: account.rs  async_account.rs  mod.rs
src/client/: async_client.rs  client.rs  mod.rs
src/common/: async_common.rs  common.rs  mod.rs
src/general/: async_general.rs  general.rs  mod.rs
src/market/: async_market.rs  market.rs  mod.rs
src/spot/: async_spot.rs  mod.rs  spot.rs
src/wallet/: async_wallet.rs  mod.rs  wallet.rs
