[package]
name = "lbank-rs"
version = "0.3.0"
edition = "2021"
authors = ["LBank Development Team"]
description = "Complete Rust SDK for LBank API - Market data, trading, wallet management with both sync/async support, RSA/HmacSHA256 auth"
readme = "README.md"
homepage = "https://www.lbank.com"
repository = "https://github.com/mmingyeomm/lbank-rs"
documentation = "https://docs.rs/lbank-rs"
license = "MIT"
keywords = ["lbank", "crypto", "exchange", "api", "trading"]
categories = ["api-bindings", "asynchronous", "web-programming::http-client"]

[dependencies]
hex = "0.4"
hmac = "0.12.1"
sha2 = "0.10.8"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
error-chain = { version = "0.12.4", default-features = false }
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
tungstenite = { version = "0.21.0", features = ["native-tls"] }
url = "2.5.0"
clap = "4.5.2"
uuid = { version = "1.18.1", features = ["v4"] }
md-5 = "0.10.6"
dotenv = "0.15.0"
rsa = { version = "0.9", features = ["sha2"] }
base64 = "0.22"
